crates/spectrum-theme/tests/ui/unresolved_reference.rs
use spectrum_theme::include_theme_tokens;

include_theme_tokens! {
    struct UnresolvedReference;
    source = "unresolved_reference.toml";
    format = toml;
}

fn main() {}
